# RoboRun

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  pyproject.toml
.github/workflows/: pages.yml  release.yml  verify.yml
assets/robots/: generic_drone.xml  scene_empty.xml  unitree_g1.xml  unitree_go1.xml
docs/: ARCHITECTURE_SPEC.md  ARENA_SPEC.md  OPENCLAW.md  SIM_SPEC.md  SPEED_LAYERS.md
integrations/openclaw/: SKILL.md
roborun/: __init__.py  agent.py  anchor.py  arena.py  beacons.py  behaviors.py  connect.py  dataset.py  depth.py  events.py  integrity.py  llm.py  mcp_stdio.py  mission.py  models.py  observations.py  openclaw.py  openclaw_mcp.py  r2sync.py  recorder.py  robot_types.py  ros_camera.py  ros_mcp.py  ros_telemetry.py  rosbridge.py  scene_builder.py  server.py  sightings.py  simulator.py  spatial_memory.py  telemetry.py  trajectory.py  webcam.py  zk_prover.py
roborun/routes/: __init__.py  _singletons.py  agent.py  arena.py  behaviors.py  dashboard.py  dataset.py  fleet.py  launch.py  mcp.py  memory.py  ros.py  run.py  simulator.py  skills.py  tasks.py  webcam.py  zk.py
roborun/skills/: __init__.py  _template.py  compose.py  follow_me.py  inspect.py  manager.py  patrol.py  scan_detect.py
roborun/transport/: __init__.py  bridge.py  dds.py  native.py  schemas.py  tap.py
roborun/web/: app.js  arena.html  arena.js  deck.css  deck.html  deck.js  demo.css  demo.html  demo.js  index.html  physics.js  robot-type-ui.js  styles.css  telemetry-charts.js  wasm.js  websocket-client.js
roborun/web/py/: shim.py
scripts/: build_site.py  deploy_vercel.sh  e2e_arena.mjs  e2e_physics.mjs  e2e_wasm.mjs  start.sh
tests/: test_arena.py  test_arm_demo.py  test_beacons.py  test_behaviors.py  test_contract.py  test_demo_policy.py  test_integrity.py  test_llm.py  test_mission.py  test_observations.py  test_openclaw.py  test_recorder.py  test_ros_camera.py  test_sightings.py  test_skills_manager.py  test_think.py  test_transport.py
web/: app.js  index.html  styles.css  telemetry-charts.js  three-panels.js
