[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ros-agent"
version = "0.10.0"
description = "Quickly run and manage ROS 1/2 robots. Built-in MCP for Claude, Cursor, or any AI client, plus vision, sim, and hot-reload behaviors. Merkle proofs make every run tamper-evident and replayable."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Pablo", email = "pablo@hashingsystems.com"}]
keywords = ["robotics", "ros", "ros2", "mcp", "agent", "ai", "robot-control", "claude", "yolo", "clip", "fleet", "mujoco", "isaac-sim", "gazebo", "skills", "teleop", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "websocket-client>=1.6",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/publu/RoboRun"
Repository = "https://github.com/publu/RoboRun"

[project.optional-dependencies]
vision = [
    "ultralytics>=8.0",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "Pillow>=10.0",
    "torch>=2.0",
    "torchvision>=0.15",
    "open-clip-torch>=2.20",
]
depth = ["transformers>=4.30"]
jepa = ["timm>=0.9"]
sim = ["mujoco>=3.0", "onnxruntime>=1.16"]
gemini = ["google-generativeai>=0.8"]
ros = ["ros_tap>=0.1", "cyclonedds>=0.10"]
crypto = ["cryptography>=42.0"]
all = ["ros-agent[vision,sim,depth,jepa,gemini,ros,crypto]"]

[project.scripts]
ros-agent = "roborun.server:main"
ros-agent-mcp = "roborun.mcp_stdio:main"

[tool.setuptools.packages.find]
include = ["roborun*"]

[tool.setuptools.package-data]
roborun = ["web/**/*"]
